fix: 修复岗位分配bug